update new login alert template

--- a/apps/api/templates/new-login-alert.html
+++ b/apps/api/templates/new-login-alert.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     <h1>There was a new login to your Horizon account</h1>
-    <p>There was a new login to your account at {{.Date}}.</p>
+    <p>
+      There was a new login to your account at {{.Date}} from {{.Location}}.
+    </p>
     <p>If you have security concerns, please contact our help team.</p>
     <p>If you think you accidentally got this email, please discard it.</p>
     <p>Thanks!</p>
